--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^17.3.0",
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "json-server": "^1.0.0-beta.0",
     "rxjs": "~7.8.0",
